# portfolio-convertor

./: .gitignore  README.md  account_50017360_en_xlsx_2020-12-31_2025-12-30.xlsx  main.py  pyproject.toml
.github/workflows/: ruff.yml  test.yml
convertor/: __main__.py  constants.py
convertor/readers/: reader.py  trading212_reader.py  xtb_reader.py
convertor/stocks/: stock.py  trading212_stock.py  xtb_stock.py
docs/superpowers/plans/: 2026-04-18-dividend-currency.md
docs/superpowers/specs/: 2026-04-18-dividend-currency-design.md
src/: main.py
src/convertor/: constants.py  currency.py  report.py  report_manager.py  store.py  utils.py
src/convertor/readers/: ibkr_reader.py  reader.py  trading212_reader.py  xtb_reader.py
src/convertor/stocks/: dividend.py  ibkr_stock.py  stock.py  trading212_stock.py  xtb_stock.py
tests/: test_dividend.py  test_trading212_reader.py  test_utils.py  test_xtb_reader.py
tests/readers/: test_ibkr_reader.py  test_trading212_reader.py  test_xtb_reader.py
