[project]
name = "portfolio-convertor"
version = "0.3.1"
description = "Magically transfers your portfolio to our standard"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pydantic>=2.12.5",
]

[dependency-groups]
test = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "types-openpyxl>=3.1.5.20250919",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
